# code-challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: codechallenge.ipynb
src/database/: .env-sample  config.py  mySQL.py
src/database/models/: Tables.py
src/output/: test.csv
src/test/: success-response.json
